--- a/team.html
+++ b/team.html
@@ -44,7 +44,7 @@
     <br>
     <br>
     <h2>Joshua</h2>
-    <img src="josh.jpg" style="height: 300px">
+    <img src="" style="height: 300px">
     <br>
 
     
