--- a/team.html
+++ b/team.html
@@ -10,30 +10,29 @@
 
 <body>
     <object id="nav-object" data="nav.html"></object>
-    <h1 style="margin-top: 64px">There are Some of Our Team Members</h1>
+    <h1 style="margin-top: 64px">Here are Some of Our Team Members</h1>
     <br>
     <br>
     <h2>Boris Johnson</h3>
     <img src="boris.jfif" style="height: 300px">
     <br>
     <br>
-    <h2>Kim Jong Un</h2>
-    <img src="kimmy boy.jfif" style="height: 300px">
-    <br>
-    <br>
+
     <h2>Donald Trump's Mug🍺shot</h2>
     <img src="donaldtrump.jfif" style="height: 300px">
     <br>
     <br>
-    <h2>Lord Darius</h2>
-    <img src="LordDarius.jpg" style="height: 300px">
-    <br>
-    <br>
+
     <h2>Sir Heilyn</h2>
     <img src="Sir Heilyn.jpg" style="height: 300px">
     <br> <br>
     <h2>King Cameron</h2>
     <img src="King.png" style="height: 300px">
+    <br>
+    <br>
+    <h2>Kim Jong Un</h2>
+    <img src="kimmy boy.jfif" style="height: 300px">
+    <br>
     <br>
     <h2>Baron Broadband</h2>
     <img src="Adam.jpg" style="height: 300px">
@@ -45,6 +44,10 @@
     <br>
     <h2>Joshua</h2>
     <img src="" style="height: 300px">
+    <br>
+    <h2>Lord Darius</h2>
+    <img src="LordDarius.jpg" style="height: 300px">
+    <br>
     <br>
 
     
