--- a/team.html
+++ b/team.html
@@ -18,7 +18,7 @@
     <br>
     <br>
 
-    <h2>Donald Trump's Mug🍺shot</h2>
+    <h2>Donald Trump</h2>
     <img src="donaldtrump.jfif" style="height: 300px">
     <br>
     <br>
@@ -39,14 +39,14 @@
     <br> 
     <br>
     <h2>Murray </h2>
-    <img src="Murry.jpg" style="height: 300px">
+    <img src="Murry.png" style="height: 300px">
     <br>
     <br>
     <h2>Joshua</h2>
-    <img src="" style="height: 300px">
+    <img src="joush.png" style="height: 300px">
     <br>
     <h2>Lord Darius</h2>
-    <img src="LordDarius.jpg" style="height: 300px">
+    <img src="LordDarius.png" style="height: 300px">
     <br>
     <br>
 
