--- a/team.html
+++ b/team.html
@@ -17,24 +17,23 @@
     <img src="boris.jfif" style="height: 300px">
     <br>
     <br>
-
     <h2>Donald Trump</h2>
     <img src="donaldtrump.jfif" style="height: 300px">
-    <br>
-    <br>
-
-    <h2>Sir Heilyn</h2>
-    <img src="Sir Heilyn.jpg" style="height: 300px">
-    <br> <br>
-    <h2>King Cameron</h2>
-    <img src="King.png" style="height: 300px">
     <br>
     <br>
     <h2>Kim Jong Un</h2>
     <img src="kimmy boy.jfif" style="height: 300px">
     <br>
     <br>
-    <h2>Baron Broadband</h2>
+    <h2>Sir Heilyn</h2>
+    <img src="Sir Heilyn.png" style="height: 300px">
+    <br> <br>
+    <h2>King Cameron</h2>
+    <img src="King.png" style="height: 300px">
+    <br>
+    <br>
+    <br>
+    <h2>big forehead Baron Broadband</h2>
     <img src="Adam.jpg" style="height: 300px">
     <br> 
     <br>
