--- a/team.html
+++ b/team.html
@@ -33,7 +33,7 @@
     <br>
     <br>
     <br>
-    <h2>big forehead Baron Broadband</h2>
+    <h2>big forehead Baron Broadband the gay</h2>
     <img src="Adam.jpg" style="height: 300px">
     <br> 
     <br>
