--- a/team.html
+++ b/team.html
@@ -28,12 +28,12 @@
     <h2>Sir Heilyn</h2>
     <img src="Sir Heilyn.png" style="height: 300px">
     <br> <br>
-    <h2>King Cameron</h2>
+    <h2> Cameron sucks murrays cock</h2>
     <img src="King.png" style="height: 300px">
     <br>
     <br>
     <br>
-    <h2>big forehead Baron Broadband the gay</h2>
+    <h2>baron broadband</h2>
     <img src="Adam.jpg" style="height: 300px">
     <br> 
     <br>
