--- a/team.html
+++ b/team.html
@@ -42,7 +42,7 @@
     <br>
     <br>
     <h2>Joshua</h2>
-    <img src="joush.png" style="height: 300px">
+    <img src="joush.jpg" style="height: 300px">
     <br>
     <h2>Lord Darius</h2>
     <img src="LordDarius.png" style="height: 300px">
