--- a/Nft.html
+++ b/Nft.html
@@ -9,7 +9,7 @@
 
 <body>
     <object id="nav-object" data="nav.html"></object>
-    <Table></Table>
+    <h1 style="margin-top: 64px">Here are Our NFTs</h1>
 
 
 </body>
