--- a/Nft.html
+++ b/Nft.html
@@ -10,7 +10,7 @@
 <body>
     <object id="nav-object" data="nav.html"></object>
     <h1 style="margin-top: 64px">Here are Our NFTs</h1>
-
+    <img src="58eyvu.png" alt="height: 300px">
 
 </body>
 
