--- a/team.html
+++ b/team.html
@@ -13,7 +13,7 @@
     <h1 style="margin-top: 64px">Here are Some of Our Team Members</h1>
     <br>
     <br>
-    <h2>Vladamir johnson</h3>
+    <h2>Boris johnson</h3>
         <img src="boris.jfif" style="height: 300px">
         <br>
         <br>
