--- a/Nft.html
+++ b/Nft.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Nft of clash</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="Nft.css">
 </head>
