--- a/Nft.html
+++ b/Nft.html
@@ -12,6 +12,12 @@
 <body>
     <object id="nav-object" data="nav.html"></object>
     <h1 style="margin-top: 64px">Here are Our NFTs</h1>
+    <br>
+    <br>
+    <h2>Monkey</h2>
+    <img src="Monkey.png" style="height: 300px">
+    <br>
+    <br>
 
 </body>
 
