--- a/team.html
+++ b/team.html
@@ -22,7 +22,7 @@
     <img src="Sir Heilyn.png" style="height: 300px">
     <br>
     <br>
-    <h2>King Cameron</h2>
+    <h2>👑King Cameron👑</h2>
     <img src="King.png" style="height: 300px">
     <br>
     <br>
