--- a/Nft.html
+++ b/Nft.html
@@ -14,11 +14,15 @@
     <h1 style="margin-top: 64px">Here are Our NFTs</h1>
     <br>
     <br>
-    <h2>Monkey</h2>
     <img src="Monkey.png" style="height: 300px">
+    <h3>Monkey</h3>
     <br>
     <br>
-
+    <img src="Big Pen.jpg" style="height: 300px">
+    <h3>Big Pen</h3>
+    <br>
+    <br>
+    
 </body>
 
 </html>
