--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <summary>List of Lies and Propoganda:</summary>
             <ul>
                 <li>China</li>
+                <li>humanity</li>
                 <li>The Pyramids</li>
                 <li>Deserts</li>
                 <li>The Colosseum</li>
@@ -57,6 +58,7 @@
                 <li>Australia</li>
                 <li>Hurricane Ike</li>
                 <li>Round Earth</li>
+                <li>Good Brawl Stars Teamates</li>
                 <!--Stop changing this-->
             </ul>
 
@@ -69,12 +71,12 @@
             trying out
             our <a href="immerse">imersive experience</a>. Many spies died to bring us this information, so the
             least we
-            can do is spread their work, And thier cheeks.
+            can do is spread their work.
         </p>
         <br>
         <h2>Who Are We?</h2>
         <p>We are China disbelivers. We are inevitable. WE SHALL CRUSH ALL WHO STAND IN THE WAY OF US!</p>
         <img src="thanos.gif">
-        <img
+        
 
 </html>
