--- a/Nft.html
+++ b/Nft.html
@@ -15,11 +15,15 @@
     <br>
     <br>
     <img src="Monkey.png" style="height: 300px">
-    <h3>Monkey</h3>
+    <h3>Monkey</h3><i>Darius Mankevicius</i>
     <br>
     <br>
     <img src="Big Pen.jpg" style="height: 300px">
-    <h3>Big Pen</h3>
+    <h3>Big Pen</h3><i>Cameron Dick</i>
+    <br>
+    <br>
+    <img src="Slim Heil.png" style="height: 300px">
+    <h3>Slim Heil</h3><i>Darius Mankevicius</i>
     <br>
     <br>
     
