--- a/Nft.html
+++ b/Nft.html
@@ -18,15 +18,23 @@
     <h3>Monkey</h3><i>Darius Mankevicius</i>
     <br>
     <br>
+    <br>
     <img src="Big Pen.jpg" style="height: 300px">
     <h3>Big Pen</h3><i>Cameron Dick</i>
+    <br>
     <br>
     <br>
     <img src="Slim Heil.png" style="height: 300px">
     <h3>Slim Heil</h3><i>Darius Mankevicius</i>
     <br>
     <br>
-    
+    <br>
+    <img src="The Sky.png" style="height: 300px">
+    <h3>The Sky</h3><i>Heilyn Hughes-Jones</i>
+    <br>
+    <br>
+    <br>
+
 </body>
 
 </html>
