--- a/nav.html
+++ b/nav.html
@@ -9,9 +9,10 @@
 <body>
     <div id="nav">
         <div class="nav-button" onclick="parent.location.href = './'">Home</div>
-        <div class="nav-button"  onclick="parent.location.href = './team.html'">Our Team</div>
-        <div class="nav-button"  onclick="parent.location.href = './immerse'">Immersive Experience</div>
-        <div class="nav-button"  onclick="parent.location.href = './Nft.html'">NFT</div>
+        <div class="nav-button" onclick="parent.location.href = './team.html'">Our Team</div>
+        <div class="nav-button" onclick="parent.location.href = './immerse'">Immersive Experience</div>
+        <div class="nav-button" onclick="parent.location.href = './Nft.html'">NFT</div>
+        <div class="nav-button" onclick="parent.location.href = './coming.html'">Coming Soon</div>
     </div>
     <script>
         const audio = new Audio('ambient.mp3')
