--- a/Nft.html
+++ b/Nft.html
@@ -34,6 +34,11 @@
     <br>
     <br>
     <br>
+    <img src="Dinomite.png" style="height: 300px">
+    <h3>Dinomite</h3><i>Murray Stratton</i>
+    <br>
+    <br>
+    <br>
 
 </body>
 
