--- a/Nft.html
+++ b/Nft.html
@@ -11,7 +11,7 @@
 
 <body>
     <object id="nav-object" data="nav.html"></object>
-    <h1 style="margin-top: 64px">Here are Our NFTs</h1>
+    <h1>Here are Our NFTs</h1>
     <br>
     <br>
     <img src="Monkey.png" style="height: 300px">
