--- a/coming.html
+++ b/coming.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>adam lost virginity</title>
+    <title>coming soon</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <link rel="stylesheet" href="global.css">
@@ -11,10 +11,11 @@
 
 <body>
     <object id="nav-object" data="nav.html"></object>
-    <h1 style="margin-top: 64px">Coming soon</h1>
+    <h1>Coming soon</h1>
     <br>
     <br>
-<h1><h1>
+    
+<h2><h2>
 
 </body>
 
