--- a/coming.html
+++ b/coming.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>coming soon</title>
+    <title>Top 10 Greatest Hits</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <link rel="stylesheet" href="global.css">
@@ -11,11 +11,17 @@
 
 <body>
     <object id="nav-object" data="nav.html"></object>
-    <h1>Coming soon</h1>
+    <h1>Top 10 Greatest Hits</h1>
     <br>
     <br>
+    <ol>
+        <li>
+            <h2>Barbie Girl <i>Aqua</i></h2>
+            <audio src="hits/Aqua-Barbie-girl.mp3"></audio>
+        </li>
+    </ol>
+
     
-<h2><h2>
 
 </body>
 
