--- a/coming.html
+++ b/coming.html
@@ -17,7 +17,11 @@
     <ol>
         <li>
             <h2>Barbie Girl <i>Aqua</i></h2>
-            <audio src="hits/Aqua-Barbie-girl.mp3"></audio>
+            <audio src="ambient.mp3" controls></audio>
+        </li>
+        <li>
+            <h2>Barbie Girl <i>Aqua</i></h2>
+            <audio src="hits/Aqua-Barbie-girl.mp3" controls></audio>
         </li>
     </ol>
 
