--- a/coming.html
+++ b/coming.html
@@ -16,7 +16,7 @@
     <br>
     <ol>
         <li>
-            <h2>Barbie Girl <i>Aqua</i></h2>
+            <h2>California Gur <i>Katie Perry</i></h2>
             <audio src="ambient.mp3" controls></audio>
         </li>
         <li>
