--- a/Nft.html
+++ b/Nft.html
@@ -39,6 +39,11 @@
     <br>
     <br>
     <br>
+    <img src="Big Murray.png" style="height: 300px">
+    <h3>Big Murray</h3><i>Darius Mankevicius</i>
+    <br>
+    <br>
+    <br>
 
 </body>
 
