--- a/coming.html
+++ b/coming.html
@@ -23,6 +23,14 @@
             <h2>Barbie Girl <i>Aqua</i></h2>
             <audio src="hits/Aqua-Barbie-girl.mp3" controls></audio>
         </li>
+        <li>
+            <h2>Call Me Maybe <i>Carly Rae Jaspen</i></h2>
+            <audio src="hits/Carly_Rae_Jepsen_-_Call_Me_Maybe.mp3" controls></audio>
+        </li>
+        <li>
+            <h2>Levitating <i>Dua Lipa</i></h2>
+            <audio src="" controls></audio>
+        </li>
     </ol>
 
     
