--- a/coming.html
+++ b/coming.html
@@ -28,8 +28,12 @@
             <audio src="hits/Carly_Rae_Jepsen_-_Call_Me_Maybe.mp3" controls></audio>
         </li>
         <li>
+            <h2>Gangnam Style <i>Psi</i></h2>
+            <audio src="hits/Aqua-Barbie-girl.mp3" controls></audio>
+        </li>
+        <li>
             <h2>Levitating <i>Dua Lipa</i></h2>
-            <audio src="" controls></audio>
+            <audio src="hits/Dua-Lipa-Levitating-(HiphopKit.com).mp3" controls></audio>
         </li>
     </ol>
 
