--- a/coming.html
+++ b/coming.html
@@ -16,24 +16,28 @@
     <br>
     <ol>
         <li>
-            <h2>California Gurls <i>Katie Perry</i></h2>
+            <h2>California Gurls <i><h4>Katie Perry</h4></i></h2>
             <audio src="ambient.mp3" controls></audio>
         </li>
         <li>
-            <h2>Barbie Girl <i>Aqua</i></h2>
+            <h2>Barbie Girl <i><h4>Aqua</h4></i></h2>
             <audio src="hits/Aqua-Barbie-girl.mp3" controls></audio>
         </li>
         <li>
-            <h2>Call Me Maybe <i>Carly Rae Jaspen</i></h2>
+            <h2>Call Me Maybe <i><h4>Carly Rae Jaspen</h4></i></h2>
             <audio src="hits/Carly_Rae_Jepsen_-_Call_Me_Maybe.mp3" controls></audio>
         </li>
         <li>
-            <h2>Gangnam Style <i>PSY</i></h2>
+            <h2>Gangnam Style <i><h4>PSY</h4></i></h2>
             <audio src="hits/gamnan style.mp3" controls></audio>
         </li>
         <li>
-            <h2>Levitating <i>Dua Lipa</i></h2>
+            <h2>Levitating <i><h4>Dua Lipa</h4></i></h2>
             <audio src="hits/Dua-Lipa-Levitating-(HiphopKit.com).mp3" controls></audio>
+        </li>
+        <li>
+            <h2>He's a Pirate <i><h4>Klaus Badelt</h4></i></h2>
+            <audio src="hits/Aqua-Barbie-girl.mp3" controls></audio>
         </li>
     </ol>
 
