--- a/coming.html
+++ b/coming.html
@@ -19,31 +19,36 @@
             <h2>California Gurls <i>
                     <h4>Katie Perry</h4>
                 </i></h2>
-            <audio src="ambient.mp3" controls></audio>
+            <audio src="ambient.mp3" controls controlsList="nodownload"></audio>
         </li>
         <li>
             <h2>Barbie Girl <i>
                     <h4>Aqua</h4>
                 </i></h2>
-            <audio src="hits/Aqua-Barbie-girl.mp3" controls></audio>
+            <audio src="hits/Aqua-Barbie-girl.mp3" controls controlsList="nodownload"></audio>
         </li>
         <li>
             <h2>He's a Pirate <i>
                     <h4>Klaus Badelt</h4>
                 </i></h2>
-            <audio src="hits/Pirates of the Caribbean - Hes a Pirate.mp3" controls></audio>
+            <audio src="hits/Pirates of the Caribbean - Hes a Pirate.mp3" controls controlsList="nodownload"></audio>
         </li>
         <li>
             <h2>Call Me Maybe <i>
                     <h4>Carly Rae Jaspen</h4>
                 </i></h2>
-            <audio src="hits/Carly_Rae_Jepsen_-_Call_Me_Maybe.mp3" controls></audio>
+            <audio src="hits/Carly_Rae_Jepsen_-_Call_Me_Maybe.mp3" controls controlsList="nodownload"></audio>
         </li>
         <li>
             <h2>Gangnam Style <i>
                     <h4>PSY</h4>
                 </i></h2>
-            <audio src="hits/gamnan style.mp3" controls></audio>
+            <audio src="hits/gamnan style.mp3" controls controlsList="nodownload"></audio>
+        </li>
+        <li>
+            <h2>The Spectre <i>  <h4>Alan Walker</h4>
+                </i></h2>
+            <audio src="hits/gamnan style.mp3" controls ></audio>
         </li>
         <li>
             <h2>Levitating <i>
