--- a/coming.html
+++ b/coming.html
@@ -16,10 +16,10 @@
     <br>
     <ol>
         <li>
-            <h2>California Gurls <i>
-                    <h4>Katie Perry</h4>
+            <h2>Never Gonna Give You Up<i>
+                    <h4>Rick Astley</h4>
                 </i></h2>
-            <audio src="ambient.mp3" controls controlsList="nodownload"></audio>
+            <audio src="hits/nggyu.mp3" controls controlsList="nodownload"></audio>
         </li>
         <li>
             <h2>Barbie Girl <i>
@@ -46,9 +46,10 @@
             <audio src="hits/gamnan style.mp3" controls controlsList="nodownload"></audio>
         </li>
         <li>
-            <h2>The Spectre <i>  <h4>Alan Walker</h4>
+            <h2>The Spectre <i>
+                    <h4>Alan Walker</h4>
                 </i></h2>
-            <audio src="hits/gamnan style.mp3" controls ></audio>
+            <audio src="" controls></audio>
         </li>
         <li>
             <h2>Levitating <i>
