--- a/coming.html
+++ b/coming.html
@@ -52,6 +52,24 @@
             <audio src="hits/Alan_Walker_-_The_Spectre_(Jesusful.com).mp3" controls></audio>
         </li>
         <li>
+            <h2>Free Bird <i>
+                    <h4>Lynyrd Skynyrd</h4>
+                </i></h2>
+            <audio src="" controls></audio>
+        </li>
+        <li>
+            <h2>sample <i>
+                    <h4>Artist</h4>
+                </i></h2>
+            <audio src="" controls></audio>
+        </li>
+        <li>
+            <h2>sample <i>
+                    <h4>Artist</h4>
+                </i></h2>
+            <audio src="" controls></audio>
+        </li>
+        <li>
             <h2>Levitating <i>
                     <h4>Dua Lipa</h4>
                 </i></h2>
