--- a/coming.html
+++ b/coming.html
@@ -49,13 +49,13 @@
             <h2>The Spectre <i>
                     <h4>Alan Walker</h4>
                 </i></h2>
-            <audio src="hits/Alan_Walker_-_The_Spectre_(Jesusful.com).mp3" controls></audio>
+            <audio src="hits/Alan_Walker_-_The_Spectre_(Jesusful.com).mp3" controls controlsList="nodownload"></audio>
         </li>
         <li>
             <h2>Free Bird <i>
                     <h4>Lynyrd Skynyrd</h4>
                 </i></h2>
-            <audio src="" controls></audio>
+            <audio src="hits/Lynyrd-Skynyrd-Free-Bird-.mp3" controls controlsList="nodownload"></audio>
         </li>
         <li>
             <h2>sample <i>
@@ -73,7 +73,7 @@
             <h2>Levitating <i>
                     <h4>Dua Lipa</h4>
                 </i></h2>
-            <audio src="hits/Dua-Lipa-Levitating-(HiphopKit.com).mp3" controls></audio>
+            <audio src="hits/Dua-Lipa-Levitating-(HiphopKit.com).mp3" controls controlsList="nodownload"></audio>
         </li>
 
     </ol>
