--- a/coming.html
+++ b/coming.html
@@ -16,6 +16,12 @@
     <br>
     <ol>
         <li>
+            <h2>Rule Britania <i>
+                    <h4>James Thomson</h4>
+                </i></h2>
+            <audio src="" controls></audio>
+        </li>
+        <li>
             <h2>Never Gonna Give You Up<i>
                     <h4>Rick Astley</h4>
                 </i></h2>
@@ -64,17 +70,14 @@
             <audio src="" controls></audio>
         </li>
         <li>
-            <h2>sample <i>
-                    <h4>Artist</h4>
-                </i></h2>
-            <audio src="" controls></audio>
-        </li>
-        <li>
             <h2>Levitating <i>
                     <h4>Dua Lipa</h4>
                 </i></h2>
             <audio src="hits/Dua-Lipa-Levitating-(HiphopKit.com).mp3" controls controlsList="nodownload"></audio>
         </li>
+
+        <h2>Honorable Mention</h2>
+        <h2>Michael Myers Theme Song</h2>
 
     </ol>
 
