--- a/nav.html
+++ b/nav.html
@@ -12,7 +12,7 @@
         <div class="nav-button" onclick="parent.location.href = './team.html'">Our Team</div>
         <div class="nav-button" onclick="parent.location.href = './immerse'">Immersive Experience</div>
         <div class="nav-button" onclick="parent.location.href = './Nft.html'">NFT</div>
-        <div class="nav-button" onclick="parent.location.href = './coming.html'">Coming Soon</div>
+        <div class="nav-button" onclick="parent.location.href = './coming.html'">Top 10 Hits</div>
     </div>
     <script>
         const audio = new Audio('ambient.mp3')
