--- a/coming.html
+++ b/coming.html
@@ -64,10 +64,10 @@
             <audio src="hits/Lynyrd-Skynyrd-Free-Bird-.mp3" controls controlsList="nodownload"></audio>
         </li>
         <li>
-            <h2>sample <i>
-                    <h4>Artist</h4>
+            <h2>Build Up<i>
+                    <h4>Fischy M           usic</h4>
                 </i></h2>
-            <audio src="" controls></audio>
+            <audio src="hits/[BTCLOD.COM] Build up by Fischy Music-320k.mp3" controls controlsList="nodownload"></audio>
         </li>
         <li>
             <h2>Levitating <i>
@@ -76,9 +76,11 @@
             <audio src="hits/Dua-Lipa-Levitating-(HiphopKit.com).mp3" controls controlsList="nodownload"></audio>
         </li>
 
-        <h2>Honorable Mention</h2>
-        <h2>Michael Myers Theme Song</h2>
-        <>
+        <h2>Honorable Mentions</h2>
+            <h2><h2>Michael myers theme song <i>
+                <h4>Unknown</h4>
+            </i></h2>
+        <audio src="hits/teir-3-myers-made-with-Voicemod-technology (1).mp3" controls controlsList="nodownload"></audio>
 
     </ol>
 
