--- a/coming.html
+++ b/coming.html
@@ -65,7 +65,7 @@
         </li>
         <li>
             <h2>Build Up<i>
-                    <h4>Fischy M           usic</h4>
+                    <h4>Fischy Music</h4>
                 </i></h2>
             <audio src="hits/[BTCLOD.COM] Build up by Fischy Music-320k.mp3" controls controlsList="nodownload"></audio>
         </li>
@@ -75,12 +75,16 @@
                 </i></h2>
             <audio src="hits/Dua-Lipa-Levitating-(HiphopKit.com).mp3" controls controlsList="nodownload"></audio>
         </li>
-
+        <br>
+        <br>
+        <br>
         <h2>Honorable Mentions</h2>
-            <h2><h2>Michael myers theme song <i>
-                <h4>Unknown</h4>
-            </i></h2>
-        <audio src="hits/teir-3-myers-made-with-Voicemod-technology (1).mp3" controls controlsList="nodownload"></audio>
+        <h2>
+            <h2>Michael myers theme song <i>
+                    <h4>Unknown</h4>
+                </i></h2>
+            <audio src="hits/teir-3-myers-made-with-Voicemod-technology (1).mp3" controls
+                controlsList="nodownload"></audio>
 
     </ol>
 
