--- a/coming.html
+++ b/coming.html
@@ -16,7 +16,7 @@
     <br>
     <ol>
         <li>
-            <h2>Rule Britania <i>
+            <h2>Rule Britania!<i>
                     <h4>James Thomson</h4>
                 </i></h2>
             <audio src="hits/Rule Britannia.mp3" controls controlsList="nodownload"></audio>
