--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <summary>List of Lies and Propoganda:</summary>
             <ul>
                 <li>China</li>
-                <li>humanity</li>
+                <li>Humanity</li>
                 <li>The Pyramids</li>
                 <li>Deserts</li>
                 <li>The Colosseum</li>
@@ -58,7 +58,6 @@
                 <li>Australia</li>
                 <li>Hurricane Ike</li>
                 <li>Round Earth</li>
-                <li>Good Brawl Stars Teamates</li>
                 <!--Stop changing this-->
             </ul>
 
@@ -75,7 +74,7 @@
         </p>
         <br>
         <h2>Who Are We?</h2>
-        <p>We are China disbelivers. We are inevitable. WE SHALL CRUSH ALL WHO STAND IN THE WAY OF US!</p>
+        <p>We are China disbelivers. We love Mr Johnstone. We are inevitable. WE SHALL CRUSH ALL WHO STAND IN THE WAY OF US!</p>
         <img src="thanos.gif">
         
 
