--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </p>
         <br>
         <h2>Who Are We?</h2>
-        <p>We are China disbelivers. We love Mr Johnstone. We are inevitable. WE SHALL CRUSH ALL WHO STAND IN THE WAY OF US!</p>
+        <p>We are China disbelivers. We are inevitable. WE SHALL CRUSH ALL WHO STAND IN THE WAY OF US!</p>
         <img src="thanos.gif">
         
 
