--- a/coming.html
+++ b/coming.html
@@ -23,8 +23,8 @@
         </li>
 
         <li>
-            <h2>California Gurls</h2>
-            <h4>Katie Perry</h4>
+            <h2>California Gurls</h2><i>
+                <h4>Katie Perry</h4>
             </i></h2>
             <audio src="ambient.mp3" controls controlsList="nodownload"></audio>
         </li>
