--- a/coming.html
+++ b/coming.html
@@ -16,9 +16,9 @@
     <br>
     <ol>
         <li>
-            <h2>Never Gonna Give You Up<i>
-                    <h4>Rick Astley</h4>
-                </i></h2>
+            <h2>Never Gonna Give You Up</h2><i>
+                <h4>Rick Astley</h4>
+            </i>
             <audio src="hits/nggyu.mp3" controls controlsList="nodownload"></audio>
         </li>
 
@@ -29,52 +29,52 @@
             <audio src="ambient.mp3" controls controlsList="nodownload"></audio>
         </li>
         <li>
-            <h2>Rule Britania!<i>
-                    <h4>James Thomson</h4>
-                </i></h2>
+            <h2>Rule Britania!</h2><i>
+                <h4>James Thomson</h4>
+            </i>
             <audio src="hits/Rule Britannia.mp3" controls controlsList="nodownload"></audio>
         </li>
 
         <li>
-            <h2>Barbie Girl <i>
-                    <h4>Aqua</h4>
-                </i></h2>
+            <h2>Barbie Girl</h2><i>
+                <h4>Aqua</h4>
+            </i>
             <audio src="hits/Aqua-Barbie-girl.mp3" controls controlsList="nodownload"></audio>
         </li>
         <li>
-            <h2>He's a Pirate <i>
-                    <h4>Klaus Badelt</h4>
-                </i></h2>
+            <h2>He's a Pirate</h2><i>
+                <h4>Klaus Badelt</h4>
+            </i>
             <audio src="hits/Pirates of the Caribbean - Hes a Pirate.mp3" controls controlsList="nodownload"></audio>
         </li>
         <li>
-            <h2>Call Me Maybe <i>
-                    <h4>Carly Rae Jaspen</h4>
-                </i></h2>
+            <h2>Call Me Maybe</h2><i>
+                <h4>Carly Rae Jaspen</h4>
+            </i>
             <audio src="hits/Carly_Rae_Jepsen_-_Call_Me_Maybe.mp3" controls controlsList="nodownload"></audio>
         </li>
         <li>
-            <h2>Gangnam Style <i>
-                    <h4>PSY</h4>
-                </i></h2>
+            <h2>Gangnam Style</h2><i>
+                <h4>PSY</h4>
+            </i>
             <audio src="hits/gamnan style.mp3" controls controlsList="nodownload"></audio>
         </li>
         <li>
-            <h2>The Spectre <i>
-                    <h4>Alan Walker</h4>
-                </i></h2>
+            <h2>The Spectre</h2><i>
+                <h4>Alan Walker</h4>
+            </i>
             <audio src="hits/Alan_Walker_-_The_Spectre_(Jesusful.com).mp3" controls controlsList="nodownload"></audio>
         </li>
         <li>
-            <h2>Free Bird <i>
-                    <h4>Lynyrd Skynyrd</h4>
-                </i></h2>
+            <h2>Free Bird</h2><i>
+                <h4>Lynyrd Skynyrd</h4>
+            </i>
             <audio src="hits/Lynyrd-Skynyrd-Free-Bird-.mp3" controls controlsList="nodownload"></audio>
         </li>
         <li>
-            <h2>Build Up<i>
-                    <h4>Fischy Music</h4>
-                </i></h2>
+            <h2>Build Up</h2><i>
+                <h4>Fischy Music</h4>
+            </i>
             <audio src="hits/[BTCLOD.COM] Build up by Fischy Music-320k.mp3" controls controlsList="nodownload"></audio>
         </li>
     </ol>
@@ -85,14 +85,14 @@
     <br>
     <br>
     <h2>
-        <h2>Michael myers theme song <i>
-                <h4>Unknown</h4>
-            </i></h2>
+        <h2>Michael myers theme song</h2><i>
+            <h4>Unknown</h4>
+        </i>
         <audio src="hits/teir-3-myers-made-with-Voicemod-technology (1).mp3" controls controlsList="nodownload"></audio>
         <li>
-            <h2>Levitating <i>
-                    <h4>Dua Lipa</h4>
-                </i></h2>
+            <h2>Levitating</h2><i>
+                <h4>Dua Lipa</h4>
+            </i>
             <audio src="hits/Dua-Lipa-Levitating-(HiphopKit.com).mp3" controls controlsList="nodownload"></audio>
         </li>
 
