--- a/coming.html
+++ b/coming.html
@@ -81,20 +81,21 @@
     <br>
     <br>
     <br>
+    <br>
     <h2>Honorable Mentions</h2>
     <br>
     <br>
     <h2>
-        <h2>Michael myers theme song</h2><i>
+        <h2>Michael Myers Theme Song</h2><i>
             <h4>Unknown</h4>
         </i>
         <audio src="hits/teir-3-myers-made-with-Voicemod-technology (1).mp3" controls controlsList="nodownload"></audio>
-        <li>
-            <h2>Levitating</h2><i>
-                <h4>Dua Lipa</h4>
-            </i>
-            <audio src="hits/Dua-Lipa-Levitating-(HiphopKit.com).mp3" controls controlsList="nodownload"></audio>
-        </li>
+        <h2>Levitating</h2><i>
+            <h4>Dua Lipa</h4>
+        </i>
+        <br>
+        <br>
+        <audio src="hits/Dua-Lipa-Levitating-(HiphopKit.com).mp3" controls controlsList="nodownload"></audio>
 
 
 
