--- a/team.html
+++ b/team.html
@@ -33,7 +33,7 @@
     <img src="LordDarius.png" style="height: 300px">
     <br>
     <br>
-    <h2>Murray</h2>
+    <h2>Murray🙃</h2>
     <img src="Murry.png" style="height: 300px">
     <br>
     <br>
